fixed video not showing issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -166,10 +166,13 @@ h6 {
    background: #f6bab2;
 }
 .bg-4AD093 {
-   background-color: #4ad093;
+   background: #4ad093;
 }
 .bg-DB513E {
-   background-color: #db513e;
+   background: #db513e;
+}
+.bg-E8EDEB {
+   background: #E8EDEB;
 }
 .bg-EEE3EB {
    background: #eee3eb;
